Made changes to title and header div

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Bridges13th.GitHub.io by bridges13th</title>
+    <title>Bridges13th's Page</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Bridges13th.GitHub.io</h1>
+        <h1>Welcome</h1>
         <h2></h2>
         <a href="https://github.com/bridges13th" class="button"><small>Follow me on</small> GitHub</a>
       </div>
